# RookGame

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bidDialog.cpp  bidDialog.h  bidDialog.ui  clickableCard.cpp  clickableCard.h  cpuPlayer.cpp  cpuPlayer.h  gameController.cpp  gameController.h  main.cpp  mainWindow.cpp  mainWindow.h  messageBox.cpp  messageBox.h  messageBox.ui  nestDialog.cpp  nestDialog.h  nestDialog.ui  trumpDialog.cpp  trumpDialog.h  trumpDialog.ui  trumpLabel.cpp  trumpLabel.h
checklist/: tests.md
docs/: CONTRIBUTING.md  SoftwareDesign.md  design.md
rules/: rules.md
src/: appearancePage.cpp  appearancePage.h  bidDialog.cpp  bidDialog.h  bidDialog.ui  card.cpp  card.h  clickableCard.cpp  clickableCard.h  common.cpp  common.h  cpuPlayer.cpp  cpuPlayer.h  gameController.cpp  gameController.h  gameInfoWidget.cpp  gameInfoWidget.h  gameMenuWidget.cpp  gameMenuWidget.h  gamePage.cpp  gamePage.h  handInfo.cpp  handInfo.h  main.cpp  mainWidget.cpp  mainWidget.h  mainWindow.cpp  mainWindow.h  messageBox.cpp  messageBox.h  messageBox.ui  middleDialog.cpp  middleDialog.h  middleDialog.ui  nestDialog.cpp  nestDialog.h  overallInfo.cpp  overallInfo.h  partnerDialog.cpp  partnerDialog.h  (+18 more)
